--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "miok-jung",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "3.6.3",
     "mongoose": "5.11.15"
