--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "backend": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "miok-jung",
@@ -13,5 +14,8 @@
     "express": "^4.17.1",
     "mongodb": "3.6.3",
     "mongoose": "5.11.15"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
