--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.6.3",
-    "mongoose": "5.11.15"
+    "mongoose": "^6.2.10"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
